--- a/Example/Podfile
+++ b/Example/Podfile
@@ -9,3 +9,11 @@ target 'KProgressHUD_Example' do
 
   end
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['SWIFT_VERSION'] = '5.0'
+    end
+  end
+end
