--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,20 @@
 
 osx_image: xcode10.3
 language: objective-c
+
 cache: cocoapods
 podfile: Example/Podfile
 before_install:
-- gem install cocoapods # Since Travis is not always on latest version
-- pod install --project-directory=Example
+    - gem install cocoapods # Since Travis is not always on latest version
+    - pod install --project-directory=Example
+
+env:
+    - ACTION=test   PLATFORM=iOS    DESTINATION='platform=iOS Simulator,name=iPhone 6S'
+
+#script:
+#    - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/KProgressHUD.xcworkspace -scheme KProgressHUD-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+#    - pod lib lint --allow-warnings
+
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/KProgressHUD.xcworkspace -scheme KProgressHUD-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint --allow-warnings
+    - set -o pipefail && xcodebuild -workspace Example/KProgressHUD.xcworkspace -scheme KProgressHUD-Example -destination "$DESTINATION" $ACTION | xcpretty
+    - pod lib lint --allow-warnings
