--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
     - pod install --project-directory=Example
 
 env:
-    - ACTION=test   PLATFORM=iOS    DESTINATION='platform=iOS Simulator,name=iPhone 6S'
+    - ACTION=test   PLATFORM=iOS    DESTINATION='platform=iOS Simulator,name=iPhone SE'
 
 #script:
 #    - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/KProgressHUD.xcworkspace -scheme KProgressHUD-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
