--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,6 @@ env:
 #    - pod lib lint --allow-warnings
 
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/KProgressHUD.xcworkspace -scheme KProgressHUD-Example -sdk iphonesimulator13.1 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint --allow-warnings
+#    - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/KProgressHUD.xcworkspace -scheme KProgressHUD-Example -sdk iphonesimulator13.1 ONLY_ACTIVE_ARCH=NO | xcpretty
+    - set -o pipefail && xcodebuild -workspace Example/KProgressHUD.xcworkspace -scheme KProgressHUD-Example -destination "$DESTINATION" $ACTION | xcpretty
+    - pod lib lint --allow-warnings
